[gd_scene load_steps=13 format=3 uid="uid://c8fpnttm6gk4w"]

[ext_resource type="Theme" uid="uid://cchp864k50mvc" path="res://ui_theme.tres" id="1_a360u"]
[ext_resource type="Script" uid="uid://r1cd026nadnb" path="res://scenes/ui/game_menu/battle_action_tile.gd" id="1_hvpp5"]
[ext_resource type="Texture2D" uid="uid://df7c3fwvbntf2" path="res://assets/ui/theme_stuff/brown_panel.png" id="2_immxs"]
[ext_resource type="Texture2D" uid="uid://dpjgjw8t7drb" path="res://assets/ui/battle_action_icons/default.png" id="2_q10pi"]
[ext_resource type="Texture2D" uid="uid://6a2maeor32q" path="res://assets/ui/theme_stuff/ligh_blue_panel.png" id="4_x4qc5"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_x4qc5"]
texture = ExtResource("2_immxs")
texture_margin_left = 5.0
texture_margin_top = 5.0
texture_margin_right = 5.0
texture_margin_bottom = 5.0
expand_margin_left = 4.0
expand_margin_top = 4.0
expand_margin_right = 4.0
expand_margin_bottom = 4.0
modulate_color = Color(0.56, 0.56, 0.56, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_5yvjv"]
texture = ExtResource("4_x4qc5")
texture_margin_left = 5.0
texture_margin_top = 5.0
texture_margin_right = 5.0
texture_margin_bottom = 5.0
expand_margin_left = 2.0
expand_margin_top = 2.0
expand_margin_right = 2.0
expand_margin_bottom = 2.0

[sub_resource type="Animation" id="Animation_d0xoq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PanelContainer:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_6pixq"]
resource_name = "focus"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PanelContainer:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.033333335, 0.1, 0.16666667),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.06981317007977318, -0.03490658503988659, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.06666667),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_1tuc4"]
resource_name = "select"
length = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PanelContainer:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.15),
"transitions": PackedFloat32Array(1, 0.5, 0.5),
"update": 0,
"values": [Vector2(0.9, 0.9), Vector2(1.15, 1.15), Vector2(1.1, 1.1)]
}

[sub_resource type="Animation" id="Animation_esmic"]
resource_name = "selected"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PanelContainer:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.16666667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-0.10471975511965978, 0.10471975511965978]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1.2, 1.2)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xnnei"]
_data = {
&"RESET": SubResource("Animation_d0xoq"),
&"focus": SubResource("Animation_6pixq"),
&"select": SubResource("Animation_1tuc4"),
&"selected": SubResource("Animation_esmic")
}

[node name="BattleActionTile" type="Button"]
texture_filter = 1
custom_minimum_size = Vector2(42, 42)
offset_right = 42.0
offset_bottom = 42.0
pivot_offset = Vector2(20, 20)
script = ExtResource("1_hvpp5")

[node name="Hole" type="Panel" parent="."]
custom_minimum_size = Vector2(32, 32)
layout_mode = 0
offset_right = 42.0
offset_bottom = 42.0
scale = Vector2(0.9, 0.9)
pivot_offset = Vector2(21, 21)
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_x4qc5")

[node name="PanelContainer" type="PanelContainer" parent="."]
texture_filter = 1
custom_minimum_size = Vector2(32, 32)
layout_mode = 0
offset_right = 42.0
offset_bottom = 42.0
pivot_offset = Vector2(21, 21)
mouse_filter = 2
theme = ExtResource("1_a360u")
theme_override_styles/panel = SubResource("StyleBoxTexture_5yvjv")

[node name="TextureRect" type="TextureRect" parent="PanelContainer"]
layout_mode = 2
texture = ExtResource("2_q10pi")

[node name="NameLabel" type="Label" parent="PanelContainer/TextureRect"]
layout_mode = 0
offset_left = -5.0
offset_top = 13.0
offset_right = 37.0
offset_bottom = 40.0
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 8
text = "epic skills"
horizontal_alignment = 1
autowrap_mode = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_xnnei")
}
next/focus = &"RESET"
next/select = &"selected"

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
